<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.federicolizondo.adivinanumero.InstruccionesActivity">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scaleType="center"
        android:src="@drawable/fondo" />

    <LinearLayout

        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="4dp"
            android:layout_weight="1"
            android:background="#0F000000"
            android:gravity="center"
            android:text="@string/nombreJuego"
            android:textColor="#BFFFFFFF"
            android:textSize="@dimen/abc_text_size_headline_material" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:background="#0F000000"
            android:gravity="center"
            android:text="@string/instrucciones"
            android:textColor="#d5000000"
            android:textSize="@dimen/abc_text_size_subhead_material" />

        <TextView
            android:id="@+id/Txt_Puntajes"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            android:layout_weight="7"
            android:background="#0F000000"
            android:scrollbars="vertical"
            android:text="@string/wInstruccion"
            android:textSize="14sp"

            android:textStyle="bold"
            android:typeface="normal" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:background="#3DFFFFFF"
            android:onClick="volverInstrucciones"
            android:text="@string/volver" />
    </LinearLayout>
</RelativeLayout>
