<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.federicolizondo.adivinanumero.gameActivity$PlaceholderFragment">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scaleType="center"
        android:src="@drawable/fondo" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="0sp"
            android:layout_marginBottom="4dp"
            android:layout_weight="1"
            android:background="#0F000000"
            android:gravity="center"
            android:text="@string/nombreJuego"
            android:textColor="#BFFFFFFF"
            android:textSize="@dimen/abc_text_size_headline_material" />

        <RelativeLayout
            android:id="@+id/LinearLayout_ContenedorButonera"
            android:layout_width="fill_parent"
            android:layout_height="0sp"
            android:layout_weight="8"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/LinearLayout_BotonesUp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#0F000000">

                <Button
                    android:id="@+id/Btn_Up_UMil"
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/flechaArriba" />

                <Button
                    android:id="@+id/Btn_Up_Centena"
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/flechaArriba" />

                <Button
                    android:id="@+id/Btn_Up_Decena"
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/flechaArriba" />

                <Button
                    android:id="@+id/Btn_Up_Unidad"
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/flechaArriba" />
            </LinearLayout>
            <!-- Fin FLechas Arriba-->
            <LinearLayout
                android:id="@+id/LinearLayout_ContenedorUnidades"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/LinearLayout_BotonesUp"
                android:orientation="horizontal"

                >

                <TextView
                    android:id="@+id/Txt_UnidadMil"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/border_style"
                    android:gravity="center"
                    android:text="@string/valorIncialUnidadMil"

                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/Txt_Centena"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/border_style"
                    android:gravity="center"
                    android:text="@string/valorIncialCentena"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/Txt_Decena"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/border_style"
                    android:gravity="center"
                    android:text="@string/valorIncialDecena"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/Txt_Unidad"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/border_style"
                    android:gravity="center"
                    android:singleLine="false"
                    android:text="@string/valorIncialUnidad"
                    android:textSize="24sp"
                    android:textStyle="bold" />

            </LinearLayout>
            <!-- Fin valores -->
            <LinearLayout
                android:id="@+id/LinearLayout_BotonesDown"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/LinearLayout_ContenedorUnidades"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/Btn_Down_UMil"
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/flechaAbajo" />

                <Button
                    android:id="@+id/Btn_Down_Centena"
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/flechaAbajo" />

                <Button
                    android:id="@+id/Btn_Down_Decena"
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/flechaAbajo" />

                <Button
                    android:id="@+id/Btn_Down_Unidad"
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/flechaAbajo" />

            </LinearLayout>
            <!-- Fin Botones Abajo-->
            <Button
                android:id="@+id/Btn_Probar"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/LinearLayout_BotonesDown"
                android:layout_marginTop="8dp"
                android:background="#6F00F000"
                android:text="@string/VerficarClave" />

        </RelativeLayout>
        <!-- Fin BUTONERA -->

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:background="#3DFFFFFF"
            android:text="@string/volver" />

    </LinearLayout>
    <!-- Fin Panel Contenedor de Butonera -->

</RelativeLayout>
