<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.federicolizondo.adivinanumero.ingresarNombreActivity">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scaleType="center"
        android:src="@drawable/fondo" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="4dp"
        android:background="#0F000000"
        android:gravity="center"
        android:text="@string/nombreJuego"
        android:textColor="#BFFFFFFF"
        android:textSize="@dimen/abc_text_size_headline_material" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/textView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/IngreseNombre"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/editTextNombre"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:background="@drawable/border_style"
            android:inputType="text"
            android:textSize="24sp" />
    </LinearLayout>

    <Button
        android:id="@+id/button2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="8dp"
        android:background="#6F00F000"
        android:onClick="AceptarNombreUsuario"
        android:text="@string/BtnAceptar" />
</RelativeLayout>
